deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: petclinic-ns
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 10 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: 104785239205.dkr.ecr.us-east-2.amazonaws.com/k8s-petclinic-sj:22
        ports:
        - containerPort: 80
