service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: petclinic-ns
spec:
  selector:
    app: petclinic
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
