ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
spec:
  rules:
  - host: petclinic
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: petclinic-svc
            port:
              number: 80
